# django-ninja-boost

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
backend/: requirement.txt
backend/Apps/: routers.py  schemas.py  services.py
backend/backend/: integrations.py  settings.py  urls.py
backend/core/: api.py  dependencies.py  exceptions.py  middleware.py  pagination.py  responses.py  router.py
src/: __init__.py
src/django_ninja_boost.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ninja_boost/: __init__.py  api.py  apps.py  async_support.py  audit.py  caching.py  cli.py  conf.py  dependencies.py  docs.py  events.py  exceptions.py  health.py  idempotency.py  integrations.py  lifecycle.py  logging_structured.py  metrics.py  middleware.py  pagination.py  permissions.py  plugins.py  policies.py  rate_limiting.py  responses.py  router.py  security_headers.py  services.py  versioning.py  webhook.py
template/apps/users/: routers.py  schemas.py  services.py
template/project_name/: settings.py  urls.py
tests/: conftest.py  test_core.py  urls.py
